Closed
Bug 1002325
Opened 11 years ago
Closed 11 years ago
crash in nsPresContext::RebuildUserFontSet()
Categories
(Core :: Graphics: Text, defect)
Tracking
()
VERIFIED
FIXED
mozilla32
Tracking | Status | |
---|---|---|
firefox30 | --- | unaffected |
firefox31 | + | verified |
firefox32 | + | verified |
People
(Reporter: away, Assigned: jfkthame)
References
Details
(Keywords: crash, verifyme)
Crash Data
Attachments
(1 file)
1.00 KB,
patch
|
jtd
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-71c75c57-0b82-46c4-833c-19bf52140420.
=============================================================
New crash on nightly starting 18th April. null nsPresContext here:
xul!nsPresContext::RebuildUserFontSet
xul!nsUserFontSet::DoRebuildUserFontSet
xul!gfxUserFontSet::RebuildLocalRules
xul!RebuildLocalFonts
xul!nsTHashtable<nsUint64HashKey>::s_EnumStub
xul!PL_DHashTableEnumerate
xul!nsTHashtable<nsPtrHashKey<gfxUserFontSet> >::EnumerateEntries
xul!gfxPlatformFontList::UpdateFontList
xul!gfxWindowsPlatform::UpdateFontList
xul!nsThebesFontEnumerator::UpdateFontList
xul!nsWindow::ProcessMessage
This code was added in bug 964613.
Assignee | ||
Comment 1•11 years ago
|
||
Looks like a simple null-check should be sufficient here. mPresContext should never be null -except- when the font set is destined for deletion, in which case we no longer care about rebuilding rules.
Attachment #8413613 -
Flags: review?(jdaggett)
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
tracking-firefox31:
--- → ?
tracking-firefox32:
--- → ?
Updated•11 years ago
|
Attachment #8413613 -
Flags: review?(jdaggett) → review+
Assignee | ||
Comment 2•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/293ecda82136
I suggest we leave this bug open until we've had a few days on Nightly to confirm that the crashes go away.
Whiteboard: [leave open]
Target Milestone: --- → mozilla32
Comment 3•11 years ago
|
||
Assignee | ||
Comment 5•11 years ago
|
||
Comment on attachment 8413613 [details] [diff] [review]
don't try to rebuild rules if the font set is being deleted.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 964613
User impact if declined: sporadic crashiness on pages that use webfonts
Testing completed (on m-c, etc.): several days on nightly since patch landed, no crash reports seen
Risk to taking this patch (and alternatives if risky): minimal risk
String or IDL/UUID changes made by this patch: none
Attachment #8413613 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 6•11 years ago
|
||
(In reply to David Major [:dmajor] (UTC+12) from comment #4)
> No crashes on nightly since the 5/1 build.
Thanks for following up; marking this fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox30:
--- → unaffected
status-firefox31:
--- → affected
status-firefox32:
--- → fixed
Resolution: --- → FIXED
Whiteboard: [leave open]
Updated•11 years ago
|
Updated•11 years ago
|
Attachment #8413613 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 7•11 years ago
|
||
Comment 8•11 years ago
|
||
(In reply to David Major [:dmajor] (UTC+12) from comment #4)
> No crashes on nightly since the 5/1 build.
Confirmed
Status: RESOLVED → VERIFIED
Comment 9•11 years ago
|
||
No crashes after the 20140505004003 build for 31.
You need to log in
before you can comment on or make changes to this bug.
Description
•