bug 1002325 - don't try to rebuild rules if the font set is being deleted. r=jdaggett a=sledru