layout/style/nsFontFaceLoader.cpp
@@ -1014,5 +1014,12 @@ nsUserFontSet::GetPrivateBrowsing()
 void
 nsUserFontSet::DoRebuildUserFontSet()
 {
+  if (!mPresContext) {
+    // AFAICS, this can only happen if someone has already called Destroy() on
+    // this font-set, which means it is in the process of being torn down --
+    // so there's no point trying to update its rules.
+    return;
+  }
+
   mPresContext->RebuildUserFontSet();
 }
